--- a/TestExcel/Views/Data/Section.cshtml
+++ b/TestExcel/Views/Data/Section.cshtml
@@ -220,7 +220,7 @@
                         @using (Html.BeginForm("DeleteSection", "Data", FormMethod.Post))
                         {
                         @Html.Hidden("Del_SECTION_ID", "")
-                        <a href="#" class="btn btn-primary" data-dismiss="modal">Cancle</a>
+                        <a href="#" class="btn btn-primary" data-dismiss="modal">Cancel</a>
                         <input type="submit" value="Delete" href="#" class="btn btn-danger">
                         }
                     </div>
