--- a/TestExcel/Views/Report/data.cshtml
+++ b/TestExcel/Views/Report/data.cshtml
@@ -190,8 +190,8 @@
             <div class="w3-third w3-margin-bottom">
                 <div class="w3-container">
                     <div class="w3-card-4" style="max-width:400px;height:400px">
-                        <header class="w3-container w3-blue">
-                            <h2 class="w3-center">PDF สาขาวิชา</h2>
+                        <header class="w3-container w3-blue" style="padding-bottom:9px">
+                            <h3 class="w3-center">PDF รายการลงทะเบียนเรียน</h3>
                         </header>
                         @using (Html.BeginForm("Report", "Report", FormMethod.Post, new { @class = "form-horizontal" }))
                         {
