--- a/TestExcel/Views/Shared/_TimeScheduleLayout.cshtml
+++ b/TestExcel/Views/Shared/_TimeScheduleLayout.cshtml
@@ -16,7 +16,7 @@
     <div class="container body-content w3-margin-top">
         <div class="w3-row w3-center fontup">
             <a href="@Url.Action("DSchedule","TimeSchedule")" style="color:blue;font-size:20px">ตารางเรียน</a> |
-            <a href="@Url.Action("data","Report")" style="color:blue;font-size:20px">ดาวน์โหลด/อัพโหลด PDF/Excel</a> |
+            <a href="@Url.Action("data","Report")" style="color:blue;font-size:20px">ดาวน์โหลด/อัปโหลด PDF/Excel</a> |
             <a href="@Url.Action("Section","Data")" style="color:blue;font-size:20px">ฐานข้อมูล</a> 
         </div>
         @RenderBody()
