--- a/TestExcel/Views/Data/Building.cshtml
+++ b/TestExcel/Views/Data/Building.cshtml
@@ -116,7 +116,7 @@
                     @using (Html.BeginForm("DeleteBuilding", "Data", FormMethod.Post))
                     {
                         @Html.Hidden("Del_BUILDING_ID", "")
-                        <a href="#" class="btn btn-primary" data-dismiss="modal">Cancle</a>
+                    <a href="#" class="btn btn-primary" data-dismiss="modal">Cancel</a>
                         <input type="submit" value="Delete" href="#" class="btn btn-danger">
                     }
                 </div>
