--- a/TestExcel/Views/Data/Course.cshtml
+++ b/TestExcel/Views/Data/Course.cshtml
@@ -93,7 +93,7 @@
                     @using (Html.BeginForm("DeleteCourse", "Data", FormMethod.Post))
                     {
                         @Html.Hidden("Del_COURSE_ID", "")
-                        <a href="#" class="btn btn-primary" data-dismiss="modal">Cancle</a>
+                    <a href="#" class="btn btn-primary" data-dismiss="modal">Cancel</a>
                         <input type="submit" value="Delete" href="#" class="btn btn-danger">
                     }
                 </div>
