--- a/TestExcel/Views/Data/Member.cshtml
+++ b/TestExcel/Views/Data/Member.cshtml
@@ -111,7 +111,7 @@
                     @using (Html.BeginForm("DeleteMember", "Data", FormMethod.Post))
                     {
                         @Html.Hidden("Del_ID", "")
-                        <a href="#" class="btn btn-primary" data-dismiss="modal">Cancle</a>
+                    <a href="#" class="btn btn-primary" data-dismiss="modal">Cancel</a>
                         <input type="submit" value="Delete" href="#" class="btn btn-danger">
                     }
                 </div>
@@ -135,7 +135,7 @@
         $("#MyModal").css('display', 'block');
     }
     function EditRecord(ID) {
-        $("#DEPARTMENT_ID").val(ID);
+        $("#ID").val(ID);
         $("#USER_USERNAME").val($("#Tusername_" + ID + " p").html().trim());
         $("#USER_PASSWORD").val($("#Tpassword_" + ID + " p").html().trim());
         $("#USER_EMAIL").val($("#Temail_" + ID + " p").html().trim());
