--- a/TestExcel/Content/Style.css
+++ b/TestExcel/Content/Style.css
@@ -1,3 +1,9 @@
 ﻿table {
     empty-cells: hide;
 }
+.ui-autocomplete {
+    max-height: 100px;
+    overflow-y: auto;
+    /* prevent horizontal scrollbar */
+    overflow-x: hidden;
+}
