--- a/TestExcel/Views/Data/Course.cshtml
+++ b/TestExcel/Views/Data/Course.cshtml
@@ -1,18 +1,21 @@
 ﻿@model IEnumerable<TestExcel.Data.COURSE>
 
 @{
-    ViewBag.Title = "Department";
+    ViewBag.Title = "สาขาวิชา";
     Layout = "~/Views/Shared/_TimeScheduleLayout.cshtml";
 }
 <div class="w3-row w3-center fontup">
     <a href="~/Data/Section" style="color:blue;font-size:20px">ตอนเรียน |</a>
     <a href="~/Data/Subject" style="color:blue;font-size:20px">วิชาเรียน |</a>
-    <a href="~/Data/Branch" style="color:blue;font-size:20px">สาขาวิชา |</a>
-    <a href="~/Data/Building" style="color:blue;font-size:20px">อาคาร/ห้องเรียน |</a>
-    <a href="~/Data/Course" style="color:blue;font-size:20px">หลักสูตร |</a>
+    <a href="~/Data/Branch" style="color:blue;font-size:20px">ห้องเรียน |</a>
+    <a href="~/Data/Building" style="color:blue;font-size:20px">อาคารเรียน |</a>
+    <a href="~/Data/Course" style="color:blue;font-size:20px">สาขาวิชา |</a>
     <a href="~/Data/Department" style="color:blue;font-size:20px">ภาควิชา |</a>
-    <a href="~/Data/Professor" style="color:blue;font-size:20px">อาจารย์ |</a>
-    <a href="~/Data/Member" style="color:blue;font-size:20px">ผู้ใช้งาน |</a>
+    <a href="~/Data/Professor" style="color:blue;font-size:20px">อาจารย์ผู้สอน |</a>
+    @if (Session["status"].ToString() == "admin")
+    {
+        <a href="~/Data/Member" style="color:blue;font-size:20px">ผู้ใช้งาน |</a>
+    }
 </div>
 <br>
 <div class="container">
@@ -127,6 +130,23 @@
     }
     $(document).ready(function () {
         $('#DataTable').DataTable();
+        $("#DEPARTMENT_NAME_ID").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: '@Url.Action("GetSearchDepartment", "Search")',
+                        dataType: "json",
+                        data: { search: $("#DEPARTMENT_NAME_ID").val() },
+                        success: function (data) {
+                            response($.map(data, function (item) {
+                                return { label: "("+item.DEPARTMENT_ID + ") " + item.DEPARTMENT_NAME, value: item.DEPARTMENT_ID };
+                            }));
+                        },
+                        error: function (xhr, status, error) {
+                            alert("Error");
+                        }
+                    });
+                }
+            });
         $('.closes').click(function () {
             $("#MyModal").css('display', 'none');
         });
