--- a/TestExcel/Views/Data/Section.cshtml
+++ b/TestExcel/Views/Data/Section.cshtml
@@ -1,18 +1,21 @@
 ﻿@model IEnumerable<TestExcel.Data.SECTION>
 
     @{
-    ViewBag.Title = "Section";
-    Layout = "~/Views/Shared/_TimeScheduleLayout.cshtml";
+        ViewBag.Title = "ตอนเรียน";
+        Layout = "~/Views/Shared/_TimeScheduleLayout.cshtml";
     }
 <div class="w3-row w3-center fontup">
     <a href="~/Data/Section" style="color:blue;font-size:20px">ตอนเรียน |</a>
     <a href="~/Data/Subject" style="color:blue;font-size:20px">วิชาเรียน |</a>
-    <a href="~/Data/Branch" style="color:blue;font-size:20px">สาขาวิชา |</a>
-    <a href="~/Data/Building" style="color:blue;font-size:20px">อาคาร/ห้องเรียน |</a>
-    <a href="~/Data/Course" style="color:blue;font-size:20px">หลักสูตร |</a>
+    <a href="~/Data/Branch" style="color:blue;font-size:20px">ห้องเรียน |</a>
+    <a href="~/Data/Building" style="color:blue;font-size:20px">อาคารเรียน |</a>
+    <a href="~/Data/Course" style="color:blue;font-size:20px">สาขาวิชา |</a>
     <a href="~/Data/Department" style="color:blue;font-size:20px">ภาควิชา |</a>
-    <a href="~/Data/Professor" style="color:blue;font-size:20px">อาจารย์ |</a>
-    <a href="~/Data/Member" style="color:blue;font-size:20px">ผู้ใช้งาน |</a>
+    <a href="~/Data/Professor" style="color:blue;font-size:20px">อาจารย์ผู้สอน |</a>
+    @if (Session["status"].ToString() == "admin")
+    {
+        <a href="~/Data/Member" style="color:blue;font-size:20px">ผู้ใช้งาน |</a>
+    }
 </div>
     <br>
     <div class="container">
@@ -274,6 +277,58 @@
             $("#DeleteConfirmation").modal("show");
         }
         $(document).ready(function () {
+            $("#SUBJECT_ID").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: '@Url.Action("GetSearch","Search")',
+                        dataType: "json",
+                        data: { search: $("#SUBJECT_ID").val() },
+                        success: function (data) {
+                            response($.map(data, function (item) {
+                                return { label: item.SUBJECT_ID + " " +item.SUBJECT_NAME, value: item.SUBJECT_ID };
+                            }));
+                        },
+                        error: function (xhr, status, error) {
+                            alert("Error");
+                        }
+                    });
+                }
+            });
+            $("#SECTION_PROFESSOR_SHORTNAME").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: '@Url.Action("GetSearchProfessor","Search")',
+                        dataType: "json",
+                        data: { search: $("#SECTION_PROFESSOR_SHORTNAME").val() },
+                        success: function (data) {
+                            response($.map(data, function (item) {
+                                return { label: item.PROFESSOR_SHORTNAME + " " + item.PROFESSOR_NAME, value: item.PROFESSOR_SHORTNAME };
+                            }));
+                        },
+                        error: function (xhr, status, error) {
+                            alert("Error");
+                        }
+                    });
+                }
+            });
+            $("#SECTION_BRANCH_NAME").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: '@Url.Action("GetSearchBranch","Search")',
+                        dataType: "json",
+                        data: { search: $("#SECTION_BRANCH_NAME").val() },
+                        success: function (data) {
+                            response($.map(data, function (item) {
+                                return { label: item.BRANCH_NAME, value: item.BRANCH_NAME };
+                            }));
+                        },
+                        error: function (xhr, status, error) {
+                            alert("Error");
+                        }
+                    });
+                }
+            });
+            //////////////////////////////////////
             $('#SECTION_TIME_START').on("change", function () {
                 var TimeStart = $('#SECTION_TIME_START').val();
                 var optionlisting = "";
