--- a/TestExcel/Views/Report/data.cshtml
+++ b/TestExcel/Views/Report/data.cshtml
@@ -77,6 +77,7 @@
 </script>
 <div class="container con2" style="padding-top:40px">
     <div class="w3-row">
+        @if (Session["status"].ToString() == "admin") {
         <div class="w3-third w3-margin-bottom">
             <div class="w3-container">
                 <div class="w3-card-4" style="max-width:400px;height:400px">
@@ -115,6 +116,7 @@
                 </div>
             </div>
         </div>
+        }
         <div class="w3-third w3-margin-bottom">
             <div class="w3-container">
                 <div class="w3-card-4" style="max-width:400px;height:400px">
